# swarmgrid

./: .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  run-web.sh  setup.sh
docs/: CNAME  PLATFORM-PLAN.md  SECURITY-STATE.md  TWO-AGENT-ARCHITECTURE.md  dashboard.html  index.html  install  install.sh  login.html  pricing.html
resources/: com.swarmgrid.agent.plist
scripts/: agent_demo.sh  agent_lead.sh  agent_worker.sh  deploy-uptermd.sh  hub-test.sh  install.sh
src/swarmgrid/: __init__.py  __main__.py  auth.py  board_map.py  cli.py  cloud_config.py  config.py  dagster_manager.py  definitions.py  hub.py  hub_handler.py  jira.py  menu.py  models.py  operator_settings.py  router.py  runner.py  service.py  state.py  ui_v2.py  upterm.py  webapp.py
src/swarmgrid/agent/: __init__.py  connector.py  credential_store.py  credential_sync.py  daemon.py  frontdesk_worker.py  heartbeat.py  phonebook_worker.py  registration.py  session_manager.py  worker.py
src/swarmgrid/cloud/: api_boards.py  api_edge.py  api_teams.py  api_templates.py  app.py  auth.py  crypto.py  db.py  heartbeat_coordinator.py  relay.py  ws.py
src/swarmgrid/dagster_defs/: __init__.py  assets.py  definitions.py  jobs.py  ops.py  resources.py  schedules.py  sensors.py
src/swarmgrid/menubar/: __init__.py  app.py  build.py  launcher.py
src/swarmgrid/web_static/: app.js  index.html  styles.css  webui2.css  (+4 more)
tests/: test_dagster_integration.py  test_dashboard_syntax.sh  test_webapp_manual_launch.py
tests/e2e/: conftest.py  test_api_e2e.py  test_dashboard_e2e.py  test_landing_e2e.py
